[project]
name = "art-kit"
version = "0.1.0"
description = "image manipulation library for style transfer, sketchifying, "
authors = [
    { name = "Chibuzo Kelechi", email = "kelechichibuzo7@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.5"
license = { file = "LICENSE" }
keywords = [

]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License'
]

dependencies = [
    'opencv-python', 'torch', 'iorchvision','matplotlib', 'numpy'
]

[project.urls]
Homepage = "https://pypi.org/project/ripple_net/"
Repository = "https://github.com/kelechi-c/art_kit"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["art_kit"]
